--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,10 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
+            
+            body{
+                font-family: 'Fira Sans Extra Condensed', sans-serif;
+            }
             #main{
                 width: 1200px;
                 height: 1000px;
@@ -20,7 +24,7 @@ and open the template in the editor.
                 background-color: #4CAF50; /* Green */
                 border: none;
                 color: white;
-                padding: 16px 32px;
+                padding: 10px;
                 text-align: center;
                 text-decoration: none;
                 display: inline-block;
@@ -31,7 +35,6 @@ and open the template in the editor.
                 cursor: pointer;
                 float:left;
                 border: 10px solid black;
-                display: inline;
                 font-size: 20px;
             }
             li:hover{
@@ -40,15 +43,16 @@ and open the template in the editor.
             }
             #logo{
                 float:left;
-                margin-top:20px;
-                margin-left:20px;
-                height:200px;
+                margin-top:10px;
+                margin-left:10px;
+                height:130px;
             }
             #nav{
-                height:700px;}
+                height:200px;}
 
             hr{
-               padding-top: 200px;
+                clear:both;
+               /*padding-top: 200px;*/
                 border-top: 3px solid #000000;
             }
 
@@ -59,9 +63,10 @@ and open the template in the editor.
             }
 
         </style>
+        <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
     </head>
     <body>
-        <div id="main">
+       
             <div id="nav">
                 <img id="logo" src="logo.jpg" alt="logo">
                 <ul>
@@ -72,7 +77,7 @@ and open the template in the editor.
                 </ul>
                 <hr>
             </div>  <!-- nav-->
-
+ <div id="main">
             <div id="page1">
                 <a id="about" class="smooth"></a>
                 About page content goes here.
